# rust-ngpre

./: CHANGELOG.md  Cargo.toml  README.md
src/: data_type.rs  filesystem.rs  lib.rs  ndarray.rs  prelude.rs  tests.rs
src/compression/: gzip.rs  jpeg.rs  mod.rs
tests/: integration_test.rs  ndarray.rs
