[package]
name = "ngpre"
version = "0.0.1"
edition = "2018"
license = "MIT/Apache-2.0"
authors = ["Tom Kazimiers <tom@voodoo-arts.net>", "Andrew Champion <andrew.champion@gmail.com>"]
description = "Rust implementation of the Neuroglancer Precomputed tensor file format"
readme = "README.md"
repository = "https://github.com/tomka/rust-ngpre"
keywords = ["tensor"]
categories = ["encoding", "filesystem", "science"]

[features]
default = ["bzip", "filesystem", "gzip", "lz", "use_ndarray", "xz", "jpeg"]

bzip = ["bzip2"]
filesystem = ["fs2", "walkdir"]
gzip = ["flate2"]
lz = ["lz4"]
lz_pure = ["lz-fear"]
use_ndarray = ["ndarray", "num-traits"]
xz = ["xz2"]
jpeg = ["zune-jpeg"]

[dependencies]
byteorder = "1.3.4"
semver = "0.9"
serde_json = "1.0.39"

bzip2 = { version = "0.4", optional = true }
flate2 = { version = "1.0.16", optional = true }
fs2 = { version = "0.4", optional = true }
itertools = "0.13"
lz4 = { version = "1.23", optional = true }
lz-fear = { version = "0.1.1", optional = true }
ndarray = { version = "0.13", optional = true }
num-traits = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1", features = ["serde"] }
walkdir = { version = "2", optional = true }
xz2 = { version = "0.1", optional = true }
zune-jpeg = { version = "0.4.11", optional = true }
zune-core = "0.4.12"
jpeg-decoder = "0.3.1"
jpeg-encoder = "0.6.0"
lru = "0.12.3"
murmur3 = "0.5.2"
futures = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[dev-dependencies]
bencher = "0.1.5"
doc-comment = "0.3"
futures = "0.3"
futures-cpupool = "0.1.8"
lazy_static = "1.4"
rand = "0.7"
rayon = "1"
tempdir = "0.3"
tiff = "0.3"

[profile.release]
lto = true

[profile.bench]
lto = true
